# hvtracker-mcp

./: .dockerignore  .gitignore  .mcpbignore  Dockerfile  LICENSE  PRIVACY.md  README.md  REGISTRY_SUBMISSIONS.md  manifest.json  package-lock.json  package.json  pyproject.toml  server.json
.github/workflows/: build-mcpb.yml  ci.yml  publish-dockerhub.yml  publish-ghcr.yml  publish-mcp-registry.yml  publish-npm.yml  publish-pypi.yml
src/hvtracker_mcp/: __init__.py  server.py
test/: node-smoke.test.js
tests/: test_server.py
